# FlightPhysics

./: .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.md  README.md
.github/workflows/: CI.yml
doc/: CMakeLists.txt  Doxyfile.in
script/: collect_extension_files.py
src/: CMakeLists.txt
src/rotations/: CMakeLists.txt  RollPitchYaw.hpp  RollPitchYaw.tpp  common.hpp  common.tpp
test/: CMakeLists.txt
test/rotations/: CMakeLists.txt  RollPitchYaw.cpp  common.cpp
